# komodo

./: .gitignore  CHANGELOG.md  CNAME  Cargo.toml  EXAMPLES.md  Makefile  README.md  autocomplete.sh  default.nix  devenv.nix  go  lint-rust.sh  nixpkgs.nix  shell.nix
.github/workflows/: bench.yml  ci.yml  core-ci.yml  core.yml  (+8 more)
book/: Makefile  book.toml  default.nix
core/: .gitignore  Cargo.toml  Cross.toml  Makefile  bench.sh  core.nix  default.nix  flake.nix  interpreter-e2e-tests.sh  lint.sh  test.sh
core-browser/: .gitignore  Cargo.toml  build.sh  index.css  index.html  index.js  test.sh
core-browser/src/: builtin.rs  lib.rs
core/src/: ast.rs  builtin.rs  cst.rs  env.rs  error.rs  exec.rs  lexer.rs  lib.rs  main.rs  matcher.rs  new_weeder.rs  object.rs  parse_node.rs  parser.rs  repl.rs  rewriter.rs  run.rs  std.rs  typecheck.rs  weeder.rs
core/src/object/: decimal.rs  float.rs  fraction.rs  integer.rs  mod.rs
core/src/std/: json.rs  math.rs  mod.rs  time.rs
core/tests/: builtins.rs
editor/: index.css  index.html  index.js
examples/: cons.komodo  destructuring.komodo  fib.komodo  fib.smtc  fizzbuzz.komodo  fizzbuzz.smtc  if.komodo  import.komodo  max.komodo  mutability.komodo  numbers.komodo  polyominoes.komodo  reverse.komodo  sardinas-patterson.komodo  shadowing.komodo  struct.komodo  transform.komodo
report/: .gitignore  Makefile  build-typst-document.nix  default.nix  main.typ  ref.bib  report.nix  report.typ  shell.nix
src/: ast.rs  builtin.rs  env.rs  error.rs  eval.rs  evaluator.rs  exec.rs  file.rs  lexer.rs  main.rs  matcher.rs  object.rs  parser.rs  repl.rs  run.rs  semantic.rs  stdlib.rs  weeder.rs
std/: math.komodo  utils.komodo  utils.smtc
symstatic-analyzer/: README.md  language-configuration.json  package.json
tests/: interpreter-e2e.sh
vsc-extension/: Makefile  README.md  package.json  shell.nix  symstatic-analyzer-0.0.1.vsix
website/: index.css  index.html
(+52 files in other folders)
