[package]
name = "symstatic-browser"
version = "0.1.0"
authors = ["Danilo Pedraza <cpedraza@unal.edu.co>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.84"
symstatic = { path = "../core" }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
