[package]
name = "komodo-browser"
version = "0.3.0"
authors = ["Danilo Pedraza <cpedraza@unal.edu.co>"]
edition = "2021"
resolver = "2"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.97"
komodo = { path = "../core" }

[dev-dependencies]
wasm-bindgen-test = "0.3.47"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "z"
