[package]
name = "komodo"
version = "0.4.1"
edition = "2021"

[features]
repl = [ "rustyline" ]

[dependencies]
codespan-reporting = "0.11.1"
hifijson = "0.2.2"
pretty_assertions = "1.4.1"
gmp-mpfr-sys = { version = "1.6.4" }
rug = "1.27.0"
rustyline = { version = "14.0.0", optional = true }
unindent = "0.2.3"
