[package]
name = "komodo"
version = "0.4.1"
edition = "2021"

[features]
repl = [ "rustyline" ]

[dependencies]
codespan-reporting = "0.11.1"
hifijson = "0.2.2"
num-bigint = "0.4"
num-rational = "0.4"
num-traits = "0.2"
pretty_assertions = "1.4.1"
rustyline = { version = "14.0.0", optional = true }
unindent = "0.2.3"
